# gmapq

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/: main.py
src/gmapq/: main.py
src/gmapq/core/: args.py  const.py  env.py  fmt.py  google.py
src/gmapq/dict2xml/: __init__.py  logic.py  version.py
